--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
 ,  "preferGlobal": "true"
 ,  "dependencies":
    {  "flatiron": "0.1.x"
-   ,  "director": "1.0.x"
-   ,  "nconf": "0.5.x"
    ,  "shelljs": "0.0.x" 
    ,  "coffee-script": "1.3.x"
+   ,  "semver": "1.0.x"
+   ,  "d8": "0.2.x"
+   ,  "cliff": "0.1.x"
    }
 ,  "license": "MIT"
 ,  "engine": { "node": ">=0.6" }
