--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    ,  "d8": "0.2.x"
    ,  "cliff": "0.1.x"
    ,  "request": "2.9.x"
+   ,  "async": "0.1.x"
    }
 ,  "license": "MIT"
 ,  "engine": { "node": ">=0.6" }
