--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
    ,  "request": "2.9.x"
    ,  "async": "0.1.x"
    ,  "colors": "0.6.x"
+   ,  "underscore": "1.3.x"
    }
 ,  "license": "MIT"
 ,  "engine": { "node": ">=0.6" }
