--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
    ,  "colors": "0.6.x"
    ,  "underscore": "1.3.x"
    }
+,  "devDependencies":
+   {  "mocha": "1.x.x"
+   ,  "nock": "0.13.x"
+   }
 ,  "license": "MIT"
 ,  "engine": { "node": ">=0.6" }
 ,  "bin": { "tsm": "./exe/tsm" } 
