--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     }
 ,  "dependencies":
    {  "flatiron": "0.1.x"
-   ,  "shelljs": "0.0.x" 
    ,  "rimraf": "2.0.x"
-   ,  "coffee-script": "1.3.x"
    ,  "semver": "1.0.x"
-   ,  "d8": "0.2.x"
    ,  "cliff": "0.1.x"
    ,  "ncp": "0.2.x"
+   ,  "rc": "0.0.x"
    ,  "request": "2.9.x"
    ,  "async": "0.1.x"
    ,  "colors": "0.6.x"
-   ,  "underscore": "1.3.x"
+   ,  "optimist": "0.3.x"
+   ,  "prompt": "0.1.12"
    }
 ,  "devDependencies":
    {  "mocha": "1.x.x"
