--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
    ,  "async": "0.1.x"
    ,  "colors": "0.6.x"
    ,  "optimist": "0.3.x"
+   ,  "charm": "*"
    ,  "prompt": "0.1.12"
    }
 ,  "devDependencies":
